# apps/api/src/test-support/create-test-app.ts
@@ -340,7 +340,6 @@ export function createTestApi(input?: {
                 }
               : null,
             activeJourneys: [],
-            completedJourneys: [],
           })
         },
         listPromptWritingsUseCase(_promptId, _userId, _params) {
